Fix spacing issue on banner icons

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -68,6 +68,7 @@ body {
   justify-content: space-between;
   width: 300px;
 }
+
 .social-home button {
   background-color: hsla(0,0%,62%,.2);
   box-shadow: 0 1px 1.5px 0 rgba(0,0,0,.12), 0 1px 1px 0 rgba(0,0,0,.24);
@@ -85,5 +86,5 @@ body {
 .fa {
   font-size: 32px;
   color: white;
+  padding-top: 8px;
 }
-
